pro-dep-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      securityContext:
        runAsUser: 0  # 設定容器運行的用戶
        fsGroup: 1000
      containers:
        - name: prometheus
          image: prom/prometheus:latest
          ports:
            - containerPort: 9090
          volumeMounts:
            - name: prometheus-data
              mountPath: /prometheus  # 挂載 Persistent Volume
            - name: prometheus-config
              mountPath: /etc/prometheus/prometheus.yml  # 挂載 ConfigMap
              subPath: prometheus.yml
      volumes:
        - name: prometheus-data
          persistentVolumeClaim:
            claimName: prometheus-pvc  # 使用 PVC
        - name: prometheus-config
          configMap:
            name: prometheus-config  # 使用 ConfigMap
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
  selector:
    app: prometheus
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
