pro-gra-cicd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-meter-service
  namespace: pro-gra-demo
spec:
  selector:
    app: spring-meter
  ports:
    - port: 80
      targetPort: 8080
