pro-gra-cicd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: spring.pro-gra.cicd
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-meter-service
                port:
                  number: 80
